# maemo-input-sounds

./: Makefile.am  README  configure.ac  maemo-input-sounds.c  maemo-input-sounds.h  mis-mce.c  mis-policy.c  mis-profile.c  mis-pulse.c  mis-sound.c  mis-vibra.c  mis-xrecord.c
debian/: changelog  control  maemo-xinput-sounds-restart  maemo-xinput-sounds-start  rules
